scribble/scribble-assertions/src/test/resources/good/extensions/annotations/RecWithAnnot2.scr
module good.extensions.annotations.RecWithAnnot2;


type <java> "java.lang.integer" from "rt.jar" as int;

// assrt-core version of good.extensions.annotations.RecWithAnnot2
/*global protocol Proto1(role C, role S)
{
	rec Loop
	{
		ADD(x:int) from C to S;
		continue Loop; 
		//ADD(y:int) from C to S;
	} 
}*/
global protocol ProtSimple(role C, role S)
{
	ADD(x:int) from C to S;
	do ProtSimple(C, S); 
}

// FIXME: make separate test
// Recursion with Annotations (complicated)
/*global protocol Proto2(role A, role B, role C)  // FIXME: check model -- unexpected sat checking output
{
	rec Loop
	{
		choice at A
		{
			ADD(x:int) from A to B;  
			ADD(z:int) from B to C;
			RES(z1:int) from B to C; @"(z1 = z)"  // Weird, but based on original RecWithAnnot
		}
		or
		{
			RES(y:int) from A to B;
			RES(z2:int) from B to C; 
			continue Loop;
		}
	}
}*/
global protocol Proto2(role A, role B, role C)  // FIXME: check model -- unexpected sat checking output
{
	choice at A
	{
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;
		RES(z1:int) from B to C; @"(z1 = z)"  // Weird, but based on original RecWithAnnot
	}
	or
	{
		RES(y:int) from A to B;
		RES(z2:int) from B to C; 
		do Proto2(A, B, C);
	}
}
