scribble/scribble-assertions/src/test/resources/bad/extensions/annotations/ChoiceOutOfScopeVar2.scr
module bad.extensions.annotations.ChoiceOutOfScopeVar2;


type <java> "java.lang.integer" from "rt.jar" as int;

// assert-core version of bad.extensions.annotations.ChoiceOutOfScopeVar
global protocol Proto1(role A, role B, role C)
{
//rec Loop {
	choice at A {
		ADD(x:int) from A to B;  
		ADD(z:int) from B to C;
		RES(z2:int) from A to C; @"(z2 = z)"  // CHECKME: unexpected model/sat check output
	} or {
		RES(y:int) from A to B;
		RES(z1:int) from B to C; 
		//RES(z3:int) from A to C;  @"(z3 = z2)"
		//continue Loop;
		do Proto1(A, B, C);
		}
	//}
}